--- a/BallClub/BallClub/Custom Views/Games/FeedsCustomCell.xib
+++ b/BallClub/BallClub/Custom Views/Games/FeedsCustomCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -136,18 +136,6 @@
                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="gcQ-rG-f5d">
-                        <rect key="frame" x="260" y="106" width="52" height="35"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="35" id="HN2-st-uwn"/>
-                        </constraints>
-                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="I3E-0Q-QPa">
-                            <size key="itemSize" width="50" height="50"/>
-                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                        </collectionViewFlowLayout>
-                    </collectionView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="70" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="utu-LY-YxO">
                         <rect key="frame" x="228" y="82" width="84" height="21"/>
                         <constraints>
@@ -159,7 +147,6 @@
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="gcQ-rG-f5d" firstAttribute="leading" secondItem="YKM-yO-hKc" secondAttribute="trailing" constant="8" id="1Fx-5l-M3K"/>
                     <constraint firstItem="5jd-YX-Uyz" firstAttribute="top" secondItem="25b-eT-lad" secondAttribute="bottom" id="4QR-3A-HbF"/>
                     <constraint firstAttribute="trailingMargin" secondItem="25b-eT-lad" secondAttribute="trailing" constant="40" id="5h7-qc-BfB"/>
                     <constraint firstItem="t2A-mi-Y5j" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="21" id="9OH-kD-nCH"/>
@@ -172,7 +159,6 @@
                     <constraint firstItem="Ou6-UR-P4t" firstAttribute="leading" secondItem="5jd-YX-Uyz" secondAttribute="leading" id="Q1H-wL-4s7"/>
                     <constraint firstItem="5jd-YX-Uyz" firstAttribute="trailing" secondItem="25b-eT-lad" secondAttribute="trailing" id="QGd-js-Emw"/>
                     <constraint firstItem="utu-LY-YxO" firstAttribute="leading" secondItem="U0d-1E-Xnv" secondAttribute="trailing" constant="8" id="XNV-T6-MvR"/>
-                    <constraint firstItem="gcQ-rG-f5d" firstAttribute="top" secondItem="YKM-yO-hKc" secondAttribute="top" constant="3" id="ZCb-Vm-yuQ"/>
                     <constraint firstItem="U0d-1E-Xnv" firstAttribute="top" secondItem="jrd-4f-Lsw" secondAttribute="top" constant="3" id="ZFb-iM-YLu"/>
                     <constraint firstAttribute="trailingMargin" secondItem="t2A-mi-Y5j" secondAttribute="trailing" id="aRi-4l-Exi"/>
                     <constraint firstAttribute="leadingMargin" secondItem="WzO-lh-Kmn" secondAttribute="leading" id="bCS-MI-tgM"/>
@@ -186,7 +172,6 @@
                     <constraint firstItem="Owa-kH-RWq" firstAttribute="leading" secondItem="sKP-XI-dXB" secondAttribute="leading" id="hKK-69-hTD"/>
                     <constraint firstItem="YKM-yO-hKc" firstAttribute="top" secondItem="jrd-4f-Lsw" secondAttribute="bottom" id="ind-FK-pcW"/>
                     <constraint firstItem="WzO-lh-Kmn" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="8" id="iuc-HX-Uyn"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="gcQ-rG-f5d" secondAttribute="trailing" id="lt3-uL-AkN"/>
                     <constraint firstItem="Owa-kH-RWq" firstAttribute="top" secondItem="sKP-XI-dXB" secondAttribute="bottom" constant="6" id="pPg-Sg-Cg8"/>
                     <constraint firstItem="MRH-Re-13y" firstAttribute="leading" secondItem="Ou6-UR-P4t" secondAttribute="trailing" constant="4" id="r90-v8-1Zv"/>
                     <constraint firstItem="YKM-yO-hKc" firstAttribute="top" secondItem="Owa-kH-RWq" secondAttribute="top" constant="-3" id="yhD-Yx-fkT"/>
@@ -202,7 +187,6 @@
                 <outlet property="gameCreator" destination="5jd-YX-Uyz" id="Hf9-ZZ-4rY"/>
                 <outlet property="gameDateLabel" destination="WzO-lh-Kmn" id="wts-KK-73P"/>
                 <outlet property="gameFriends" destination="YKM-yO-hKc" id="E48-u8-SPG"/>
-                <outlet property="gameFriendsCollection" destination="gcQ-rG-f5d" id="RJt-8B-iDd"/>
                 <outlet property="gameFriendsIcon" destination="Owa-kH-RWq" id="qsj-Ll-EiH"/>
                 <outlet property="gameLocation" destination="MRH-Re-13y" id="GkE-M0-yef"/>
                 <outlet property="gameMemberCount" destination="t2A-mi-Y5j" id="OLW-95-nIU"/>
