Game Details auto layout

--- a/BallClub/BallClub/Storyboards/Game.storyboard
+++ b/BallClub/BallClub/Storyboards/Game.storyboard
@@ -96,7 +96,7 @@
             <objects>
                 <tableViewController id="0dW-Qq-mTU" customClass="GameDetailViewController" customModule="BallClub" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="grouped" separatorStyle="default" allowsSelection="NO" rowHeight="44" sectionHeaderHeight="2" sectionFooterHeight="2" id="Fxz-4f-fXf">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="850"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="900"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                         <sections>
@@ -541,11 +541,11 @@
                             </tableViewSection>
                             <tableViewSection id="IYl-9Z-nSs">
                                 <cells>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="80" id="THs-lV-gvD">
-                                        <rect key="frame" x="0.0" y="757" width="600" height="80"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="140" id="THs-lV-gvD">
+                                        <rect key="frame" x="0.0" y="757" width="600" height="140"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="THs-lV-gvD" id="6fn-la-2Zx">
-                                            <rect key="frame" x="0.0" y="0.0" width="600" height="79"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="139"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ADDITIONAL INFO" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sx1-oj-SGq">
@@ -564,10 +564,10 @@
                                                         <constraint firstAttribute="width" constant="20" id="V0g-PU-fmh"/>
                                                     </constraints>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="50-100/2-3 Scoring system, Bring your money and Jollibee. See you there" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HFC-N2-CPk">
-                                                    <rect key="frame" x="53" y="44" width="533" height="21"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="top" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="50-100/2-3 Scoring system, Bring your money  and Jollibee. See you there" lineBreakMode="tailTruncation" numberOfLines="0" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HFC-N2-CPk">
+                                                    <rect key="frame" x="53" y="44" width="533" height="34"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="21" id="QWn-bc-pIx"/>
+                                                        <constraint firstAttribute="height" constant="34" id="QWn-bc-pIx"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" type="system" weight="thin" pointSize="14"/>
                                                     <color key="textColor" red="0.33333333333333331" green="0.33333333333333331" blue="0.33333333333333331" alpha="1" colorSpace="calibratedRGB"/>
@@ -578,9 +578,9 @@
                                                 <constraint firstAttribute="trailingMargin" secondItem="sx1-oj-SGq" secondAttribute="trailing" constant="6" id="6A8-G5-kWf"/>
                                                 <constraint firstItem="tnm-of-CPJ" firstAttribute="top" secondItem="sx1-oj-SGq" secondAttribute="bottom" constant="8" id="JSG-Ag-gbC"/>
                                                 <constraint firstAttribute="trailingMargin" secondItem="HFC-N2-CPk" secondAttribute="trailing" constant="6" id="PUG-np-hSK"/>
-                                                <constraint firstAttribute="bottomMargin" secondItem="HFC-N2-CPk" secondAttribute="bottom" constant="6" id="RaJ-Ky-ejh"/>
                                                 <constraint firstItem="sx1-oj-SGq" firstAttribute="top" secondItem="6fn-la-2Zx" secondAttribute="topMargin" constant="7" id="VGJ-eN-1oV"/>
                                                 <constraint firstItem="tnm-of-CPJ" firstAttribute="leading" secondItem="sx1-oj-SGq" secondAttribute="leading" id="aDy-ds-Xgj"/>
+                                                <constraint firstItem="HFC-N2-CPk" firstAttribute="top" secondItem="sx1-oj-SGq" secondAttribute="bottom" constant="8" id="kDu-S0-EsO"/>
                                                 <constraint firstItem="HFC-N2-CPk" firstAttribute="leading" secondItem="tnm-of-CPJ" secondAttribute="trailing" constant="8" id="p6s-CC-bXV"/>
                                                 <constraint firstItem="sx1-oj-SGq" firstAttribute="leading" secondItem="6fn-la-2Zx" secondAttribute="leadingMargin" constant="17" id="v61-EB-tMx"/>
                                             </constraints>
@@ -613,7 +613,7 @@
                     </navigationItem>
                     <nil key="simulatedBottomBarMetrics"/>
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-                    <size key="freeformSize" width="600" height="850"/>
+                    <size key="freeformSize" width="600" height="900"/>
                     <connections>
                         <outlet property="additionInfo" destination="HFC-N2-CPk" id="Qkd-g0-kYk"/>
                         <outlet property="gameDate" destination="Swk-1c-0q4" id="N1O-ZG-660"/>
@@ -641,7 +641,7 @@
             <objects>
                 <tableViewController id="9FS-0q-87m" customClass="InvitedFriendsViewController" customModule="BallClub" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" allowsSelection="NO" showsSelectionImmediatelyOnTouchBegin="NO" rowHeight="55" sectionHeaderHeight="18" sectionFooterHeight="2" id="vDm-Ey-WT5">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="850"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="900"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <color key="separatorColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
